--- a/index.html
+++ b/index.html
@@ -1570,7 +1570,7 @@ animation: heartGlow 2s ease-in-out infinite, heartPulse 1.5s ease-in-out infini
 </head>
 <body>
     <!-- Password Screen -->
-    <!-- <div class="password-container" id="passwordContainer">
+    <div class="password-container" id="passwordContainer">
         <div class="password-text">Enter Password</div>
         <div class="password-row">
             <div class="password-display" id="passwordDisplay"></div>
@@ -1594,14 +1594,21 @@ animation: heartGlow 2s ease-in-out infinite, heartPulse 1.5s ease-in-out infini
         <button class="clear-button" onclick="clearPassword()">Clear</button>
     </div>
 
-    Wrong Password Popup -->
-    <!-- <div class="wrong-password-popup" id="wrongPasswordPopup">
+    <!-- Wrong Password Popup -->
+    <div class="wrong-password-popup" id="wrongPasswordPopup">
         <div class="wrong-password-content">
             <div class="wrong-password-emoji">😢</div>
-            <div class="wrong-password-text">I'm sad</div>
+            <script>
+                // Skip password screen - go directly to preloader
+                document.addEventListener('DOMContentLoaded', function() {
+                    document.getElementById('passwordContainer').classList.add('hidden');
+                    document.getElementById('preloaderContainer').style.display = 'flex';
+                    startPreloader();
+                });
+            </script>
             <button class="wrong-password-close" onclick="closeWrongPasswordPopup()">Try Again</button>
         </div>
-    </div> -->
+    </div>
 
     <!-- Preloader -->
     <div class="preloader-container" id="preloaderContainer">
@@ -1779,7 +1786,7 @@ Happy Birthday. You are the most beautiful gift in my life. Your birthday isn't 
         </section> -->
         <!-- Normal Video Section – always visible, no popup -->
 <!-- Our Beautiful Moments – normal embedded video with cover + music control -->
-<!-- <section class="video-normal-section">
+<section class="video-normal-section">
     <h2>💞 Our Beautiful Moments 💞</h2>
     <div class="video-wrapper-main">
         <video id="momentsVideo" controls preload="auto">
@@ -1787,7 +1794,7 @@ Happy Birthday. You are the most beautiful gift in my life. Your birthday isn't 
     Your browser does not support the video tag.
 </video>
     </div>
-</section> -->
+</section>
 
         <!-- Love Counter -->
         <section class="counter-section">
