--- a/index.html
+++ b/index.html
@@ -1218,7 +1218,8 @@ animation: heartGlow 2s ease-in-out infinite, heartPulse 1.5s ease-in-out infini
         .moments-section { padding: 60px 20px; text-align: center; }
         .moments-title { font-size: clamp(1.8em, 5vw, 2.6em); color: #d4145a; margin-bottom: 20px; }
         .moments-carousel { display:flex; align-items:center; justify-content:center; gap:12px; }
-        .moments-track-wrapper { width: 860px; overflow-x:auto; overflow-y:hidden; margin: 0 auto; scroll-snap-type: x mandatory; -webkit-overflow-scrolling: touch; }
+        .moments-track-wrapper { width: 860px; overflow-x:auto; overflow-y:hidden; margin: 0 auto; scroll-snap-type: x mandatory; -webkit-overflow-scrolling: touch; touch-action: pan-y; scroll-behavior: smooth; -ms-overflow-style: none; scrollbar-width: none; }
+        .moments-track-wrapper::-webkit-scrollbar { height: 0; display: none; }
         .moments-track { display:flex; gap:18px; list-style:none; padding:0; margin:0; }
         .moment-card { flex: 0 0 260px; background:#fff; border-radius:12px; overflow:hidden; box-shadow:0 8px 20px rgba(0,0,0,0.12); display:flex; flex-direction:column; scroll-snap-align: center; }
         .moment-photo { width:100%; height:auto; display:block; object-fit:cover; }
@@ -1233,7 +1234,7 @@ animation: heartGlow 2s ease-in-out infinite, heartPulse 1.5s ease-in-out infini
         .moments-counter { color:#6b2d5c; font-weight:700; }
 
         @media (max-width:1000px) {
-            .moments-track-wrapper { width: calc(100vw - 64px); }
+            .moments-track-wrapper { width: calc(100vw - 64px); touch-action: pan-y; }
             .moment-card { flex: 0 0 220px; }
             .moment-photo { height:auto; }
         }
@@ -1366,7 +1367,6 @@ Happy Birthday. You are the most beautiful gift in my life. Your birthday isn't 
             </div>
             <div class="moments-controls">
                 <button class="moments-arrow moments-prev" aria-label="Previous">❮</button>
-                <div class="moments-indicators" id="momentsIndicators"></div>
                 <div class="moments-counter"><span id="momentsIndex">1</span>/8</div>
                 <button class="moments-arrow moments-next" aria-label="Next">❯</button>
             </div>
@@ -1963,7 +1963,7 @@ function beginEmojiRain() {
 
     const track = document.getElementById('momentsTrack');
     const wrapper = document.querySelector('.moments-track-wrapper');
-    const indicators = document.getElementById('momentsIndicators');
+    const indicators = document.getElementById('momentsIndicators'); // may be null if indicators removed
     const indexLabel = document.getElementById('momentsIndex');
     let current = 0;
     let autoplayId = null;
@@ -1980,9 +1980,11 @@ function beginEmojiRain() {
                 </div>`;
             track.appendChild(li);
 
-            const btn = document.createElement('button');
-            btn.addEventListener('click', ()=> goTo(i));
-            indicators.appendChild(btn);
+            if(indicators){
+                const btn = document.createElement('button');
+                btn.addEventListener('click', ()=> goTo(i));
+                indicators.appendChild(btn);
+            }
         });
         refreshIndicators();
         // compute edge padding so first/last can center
@@ -2028,12 +2030,20 @@ function beginEmojiRain() {
     function prev(){ goTo((current-1+data.length)%data.length); }
 
     function refreshIndicators(){
-        const btns = indicators.children;
-        for(let i=0;i<btns.length;i++) btns[i].classList.toggle('active', i===current);
+        if(indicators){
+            const btns = indicators.children;
+            for(let i=0;i<btns.length;i++) btns[i].classList.toggle('active', i===current);
+        }
         if(indexLabel) indexLabel.textContent = (current+1);
     }
 
-    function startAutoplay(){ stopAutoplay(); autoplayId = setInterval(()=> next(), 4500); }
+    let carouselVisible = false;
+    function startAutoplay(){
+        // Autoplay disabled by user request — navigation only via arrows or manual swipe.
+        // Keep this stub so other code can call it safely without starting intervals.
+        stopAutoplay();
+        return;
+    }
     function stopAutoplay(){ if(autoplayId) { clearInterval(autoplayId); autoplayId=null; } }
 
     // wire arrows
@@ -2042,18 +2052,99 @@ function beginEmojiRain() {
     if(nextBtn) nextBtn.addEventListener('click', ()=>{ stopAutoplay(); next(); startAutoplay(); });
     if(prevBtn) prevBtn.addEventListener('click', ()=>{ stopAutoplay(); prev(); startAutoplay(); });
 
-    // touch support on wrapper
-    let startX = 0, deltaX = 0, isDown=false;
-    wrapper.addEventListener('pointerdown', (e)=>{ isDown=true; startX = e.clientX; wrapper.style.scrollSnapType = 'none'; });
-    wrapper.addEventListener('pointermove', (e)=>{ if(!isDown) return; deltaX = e.clientX - startX; wrapper.scrollLeft -= deltaX; startX = e.clientX; });
-    wrapper.addEventListener('pointerup', ()=>{ isDown=false; wrapper.style.scrollSnapType = ''; // settle to nearest
-        // find nearest
-        const cards = getCardElements();
-        let nearest = 0; let minDist = Infinity;
-        const center = wrapper.scrollLeft + wrapper.clientWidth/2;
-        cards.forEach((c, i)=>{ const cCenter = c.offsetLeft + c.clientWidth/2; const d = Math.abs(center - cCenter); if(d<minDist){ minDist=d; nearest=i; } });
-        goTo(nearest);
+    // touch / pointer support — single-card swipe per gesture and immediate counter update
+    let gestureStartX = 0, gestureStartY = 0, lastX = 0, lastY = 0, isDown = false, activePointerId = null, lockDir = null;
+    const SWIPE_THRESHOLD = 40; // px — minimum to count as a swipe
+
+    function settleByDirectionAndReset(endX){
+        const total = endX - gestureStartX;
+        let target = current;
+        if (total <= -SWIPE_THRESHOLD) {
+            // swipe left → next
+            target = Math.min(current + 1, data.length - 1);
+        } else if (total >= SWIPE_THRESHOLD) {
+            // swipe right → prev
+            target = Math.max(current - 1, 0);
+        } else {
+            // small movement → snap back
+            target = current;
+        }
+        // manual change: stop, move, update indicators immediately, then (no autoplay by default)
+        stopAutoplay();
+        scrollToIndex(target, true);
+        startAutoplay();
+    }
+
+    wrapper.addEventListener('pointerdown', (e)=>{
+        isDown = true;
+        lockDir = null;
+        activePointerId = e.pointerId;
+        gestureStartX = e.clientX;
+        gestureStartY = e.clientY;
+        lastX = e.clientX;
+        lastY = e.clientY;
+        wrapper.style.scrollSnapType = 'none';
+        try { wrapper.setPointerCapture(activePointerId); } catch (err) {}
     });
+
+    wrapper.addEventListener('pointermove', (e)=>{
+        if(!isDown || e.pointerId !== activePointerId) return;
+        const dx = e.clientX - lastX;
+        const dy = e.clientY - lastY;
+        lastX = e.clientX;
+        lastY = e.clientY;
+
+        // determine gesture direction once after small movement
+        if(lockDir === null){
+            const totalDx = e.clientX - gestureStartX;
+            const totalDy = e.clientY - gestureStartY;
+            if(Math.abs(totalDx) < 6 && Math.abs(totalDy) < 6) return; // still a tap
+            lockDir = Math.abs(totalDx) > Math.abs(totalDy) ? 'h' : 'v';
+        }
+
+        if(lockDir === 'v') return; // allow vertical scrolling, do not handle
+
+        // horizontal handling
+        e.preventDefault && e.preventDefault();
+        wrapper.scrollLeft -= dx;
+    });
+
+    function onPointerEnd(e){
+        if(!isDown || (e && e.pointerId && e.pointerId !== activePointerId)) return;
+        isDown = false;
+        try { if(activePointerId) wrapper.releasePointerCapture(activePointerId); } catch (err) {}
+        activePointerId = null;
+        wrapper.style.scrollSnapType = 'x mandatory';
+        // if gesture was vertical, ignore
+        if(lockDir === 'v') { lockDir = null; return; }
+        const endX = (e && typeof e.clientX === 'number') ? e.clientX : lastX;
+        lockDir = null;
+        settleByDirectionAndReset(endX);
+    }
+
+    wrapper.addEventListener('pointerup', onPointerEnd);
+    wrapper.addEventListener('pointercancel', onPointerEnd);
+    wrapper.addEventListener('pointerleave', onPointerEnd);
+    // fallback for touch-only browsers
+    wrapper.addEventListener('touchend', (e)=> onPointerEnd(e.changedTouches ? { clientX: e.changedTouches[0].clientX } : e));
+    wrapper.addEventListener('touchcancel', (e)=> onPointerEnd(e.changedTouches ? { clientX: e.changedTouches[0].clientX } : e));
+
+    // Observe visibility of the section to control autoplay
+    const momentsSection = document.getElementById('momentsSection');
+    const visibilityObserver = new IntersectionObserver((entries)=>{
+        entries.forEach(en=>{
+            if(en.isIntersecting){
+                carouselVisible = true;
+                // ensure padding/layout updated then start
+                setEdgePadding();
+                startAutoplay();
+            } else {
+                carouselVisible = false;
+                stopAutoplay();
+            }
+        });
+    }, { threshold: 0.5 });
+    if(momentsSection) visibilityObserver.observe(momentsSection);
 
     // build on DOM ready
     document.addEventListener('DOMContentLoaded', build);
