--- a/index.html
+++ b/index.html
@@ -1221,17 +1221,17 @@ animation: heartGlow 2s ease-in-out infinite, heartPulse 1.5s ease-in-out infini
         .moments-track-wrapper { width: 860px; overflow-x:auto; overflow-y:hidden; margin: 0 auto; scroll-snap-type: x mandatory; -webkit-overflow-scrolling: touch; touch-action: pan-y; scroll-behavior: smooth; -ms-overflow-style: none; scrollbar-width: none; }
         .moments-track-wrapper::-webkit-scrollbar { height: 0; display: none; }
         .moments-track { display:flex; gap:18px; list-style:none; padding:0; margin:0; }
-        .moment-card { flex: 0 0 260px; background:#fff; border-radius:12px; overflow:hidden; box-shadow:0 8px 20px rgba(0,0,0,0.12); display:flex; flex-direction:column; scroll-snap-align: center; }
+        .moment-card { flex: 0 0 260px; background:rgba(0,0,0,0.12); border-radius:12px; overflow:hidden; box-shadow:0 8px 20px rgba(0,0,0,0.12); display:flex; flex-direction:column; scroll-snap-align: center; }
         .moment-photo { width:100%; height:auto; display:block; object-fit:cover; }
-        .moment-body { padding:14px; text-align:left; font-family:'Georgia', serif; color:#2d1a0f; }
-        .moment-date { font-weight:700; color:#d4145a; margin-bottom:8px; }
-        .moment-text { font-size:0.95rem; line-height:1.4; }
+        .moment-body { padding:14px; text-align:left; font-family:'Georgia', serif; background:#2f2f2f; color:#ffffff; }
+        .moment-date { font-weight:700; color:#d4af37; margin-bottom:8px; }
+        .moment-text { font-size:0.95rem; line-height:1.4; color:#ffffff; text-align: center;}
         .moments-arrow { background:white; border:1px solid rgba(0,0,0,0.08); width:44px; height:44px; border-radius:50%; cursor:pointer; box-shadow:0 6px 18px rgba(0,0,0,0.08); }
         .moments-controls { margin-top:12px; display:flex; justify-content:center; align-items:center; gap:12px; }
         .moments-indicators { display:flex; gap:8px; }
         .moments-indicators button{ width:10px; height:10px; border-radius:50%; border:none; background:rgba(0,0,0,0.15); cursor:pointer; }
         .moments-indicators button.active { background:#d4145a; }
-        .moments-counter { color:#6b2d5c; font-weight:700; }
+        .moments-counter { color:#ffffff; font-weight:700; }
 
         @media (max-width:1000px) {
             .moments-track-wrapper { width: calc(100vw - 64px); touch-action: pan-y; }
@@ -1951,14 +1951,14 @@ function beginEmojiRain() {
 // Important Moments carousel functionality
 (function(){
     const data = [
-        {src:'./1-1.jpeg', date:'2024-03-12', text:'Beach picnic and sunset.'},
-        {src:'./1-2.jpeg', date:'2023-12-01', text:'Snow day memories.'},
-        {src:'./1-3.jpeg', date:'2023-08-05', text:'Our road trip.'},
-        {src:'./1.jpg',   date:'2022-06-20', text:'Graduation day.'},
-        {src:'./2.jpg',   date:'2021-11-10', text:'First concert together.'},
-        {src:'./3.jpg',   date:'2020-02-14', text:'Valentine surprise.'},
-        {src:'./4.jpg',   date:'2019-09-30', text:'Hiking and views.'},
-        {src:'./1.jpg',   date:'2018-05-18', text:'Café morning.'}
+        {src:'./Our first photo on your last birthday.jpeg', date:'21-01-2025', text:'Our first photo on your last birthday'},
+        {src:'./That day in safari park.jpeg', date:'24-01-2025', text:'That day in safari park'},
+        {src:'./Our lovely photo side by side in arcade.jpeg', date:'06-03-2025', text:'Our lovely photo side by side in arcade'},
+        {src:'./Photo in a special day for me in dream park.jpeg',   date:'20-06-2025', text:'Photo in a special day for me in dream park'},
+        {src:'./Our photo in a date night with my home.jpeg',   date:'10-09-2025', text:'Our photo in a date night with my home'},
+        {src:'./You make me love my birthday.jpeg',   date:'20-11-2025', text:'You make me love my birthday'},
+        {src:'./Always where I belong.jpeg',   date:'01-11-2025', text:'Always where I belong.'},
+        {src:'./Closing 2025 in date with my fav person ever.jpeg',   date:'28-12-2025', text:'Closing 2025 in date with my fav person ever.'}
     ];
 
     const track = document.getElementById('momentsTrack');
